styles.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');

:root {
    --primary-color: #497876;
    --dark-gray: #817F8F;
    --light-gray: #E4EDF0;
}

body {
    font-family: 'Nunito Sans', sans-serif;
    margin: 0;
}

hr {
    margin: 2rem 0;
}

/* spacing */

.padding-md {
    padding: 2rem
}

/* container */

.container {
    padding-left: 1rem;
    padding-right: 1rem;
}

.container-center {
    max-width: 600px;
    margin: auto;
}

/* link */

.link {
    text-decoration: none;
    padding: 0.5rem 1rem;
}

.link-primary {
    background-color: var(--primary-color);
    color: white;
    border-radius: 0.5rem;
}

.link-secondary {
    color: var(--primary-color);
    border-radius: 0.5rem;
    border: 1px solid var(--primary-color);
}

/* lists */

.list-non-bullet {
    list-style: none;
}

.list-item-inline {
    display: inline;
    padding: 0 0.5rem;
}

/* nav */

.navigation {
    background-color: var(--primary-color);
    color: white;
    padding: 1rem;
    border-bottom-left-radius: 1.2rem;
}

.navigation .link {
    color: white;
    font-weight: 300;
}

.navigation .nav-pills {
    text-align: right;
}

.navigation .nav-brand {
    font-weight: bold;
    font-size: 1.2rem;
}

.navigation .link-active {
    font-weight: bold;
}

/* header */

.hero {
    padding: 2rem;
    padding-top: 5rem;
}

.hero .hero-image {
    max-width: 350px;
    display: block;
    margin: auto;
}

.hero .hero-heading {
    color: var(--dark-gray);
    text-align: center;
}

.hero .hero-heading .heading-inverted {
    color: var(--primary-color);
}

/* section */

section {
    padding: 2rem;
}

section h1{
    text-align: center;
}

.ow {
    background-color: var(--light-gray);
}

/* footer */

footer {
    background-color: var(--primary-color);
    padding: 2rem 1rem;
    text-align: center;
    color: white;
    border-top-right-radius: 1.2rem;
}

.footer-header {
    font-weight: bold;
    font-size: large;
}

footer .link {
    color: white;
}

footer ul {
    padding-inline-start: 0;
}

.project-list {
    padding-inline-start: 0;
}

.live-link {
    display: block;
    max-width: 100px;
    text-align:center;
}

.github-link {
    display: block;
    max-width: 205px;
    text-align:center;
    margin-top: 0.75rem;
}

